--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
+      "@common/*": ["./src/common/*"],
       "@styles/*": ["./src/styles/*"]
     }
   },
