--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "emotion-normalize": "^11.0.1",
+    "framer-motion": "^11.0.12",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
