--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-qr-code": "^2.0.12",
     "recoil": "^0.7.7"
   },
   "devDependencies": {
