--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "next-13-template",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://bo-like-chicken.github.io/coffee-connect-prototype",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "husky install",
-    "test": "jest"
+    "test": "jest",
+    "predeploy": "pnpm run build",
+    "deploy": "gh-pages -d build"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -46,6 +49,7 @@
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "eslint-plugin-import": "^2.29.1",
+    "gh-pages": "^6.1.1",
     "husky": "^8.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
